--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "dependencies": {
+    "@emailjs/browser": "3.6.2",
+    "@emotion/react": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
@@ -55,7 +57,6 @@
     "css-loader": "^1.0.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
-    "@emailjs/browser": "3.6.2",
     "emailjs": "^4.0.0",
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
